kubernetes/apps/networking/cilium-gateway/app/reference-grant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: cilium-gateway-secrets
  namespace: networking
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: networking
  to:
    - group: ""
      kind: Secret
