kubernetes/apps/networking/cilium-gateway/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: networking
  annotations:
    external-dns.kubernetes.io/target: "ingress.${PUBLIC_DOMAIN}"
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: "ingress.${PUBLIC_DOMAIN}"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${PUBLIC_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${PUBLIC_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production-tls"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: networking
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: "${GATEWAY_INTERNAL_ADDR}"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production-tls"
    - name: ssh
      protocol: TCP
      port: 2222
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: forgejo
