kubernetes/apps/networking/cilium-gateway/app/home-lan-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-lan-redirect
  namespace: networking
  annotations:
    external-dns.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: http
  hostnames:
    - home.lan
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: "homepage.${SECRET_DOMAIN}"
            statusCode: 302
