kubernetes/apps/networking/cilium-gateway/app/https-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: networking
  annotations:
    external-dns.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: external
      namespace: networking
      sectionName: http
    - name: internal
      namespace: networking
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
